# phantom-coerce

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
phantom-coerce/: Cargo.toml
phantom-coerce-derive/: Cargo.toml
phantom-coerce-derive/src/: lib.rs
phantom-coerce/examples/: heterogeneous_collections.rs  message_formats.rs  partial_coercion.rs  request_validation.rs  typed_path.rs
phantom-coerce/src/: lib.rs
phantom-coerce/tests/: asref.rs  complex.rs  complex_cloned.rs  integration_test.rs  multi_owned.rs  nested_alternatives.rs  owned.rs  t_generic_name.rs  test_t_generic_name.rs  type_hole.rs  typed_path.rs  typed_path_restricted.rs
phantom-coerce/tests/ui/: asref_on_non_borrowed.rs  asref_on_non_borrowed.stderr  coerce_completely_unlisted_type.rs  coerce_completely_unlisted_type.stderr  coerce_unlisted_source_type.rs  coerce_unlisted_source_type.stderr  coerce_unlisted_with_type_hole.rs  coerce_unlisted_with_type_hole.stderr  duplicate_to_attribute.rs  duplicate_to_attribute.stderr  empty_from_pattern.rs  empty_from_pattern.stderr  empty_to_pattern.rs  empty_to_pattern.stderr  mismatched_cloned_owned.rs  mismatched_cloned_owned.stderr  mismatched_from_to_modes.rs  mismatched_from_to_modes.stderr  mismatched_owned_borrowed.rs  mismatched_owned_borrowed.stderr  missing_clone.rs  missing_clone.stderr  missing_from_attribute.rs  missing_from_attribute.stderr  missing_to_attribute.rs  missing_to_attribute.stderr  no_coerce_attrs.rs  no_coerce_attrs.stderr  noop_coercion.rs  noop_coercion.stderr  on_enum.rs  on_enum.stderr  type_hole_prevents_cross_coercion.rs  type_hole_prevents_cross_coercion.stderr
