[package]
name = "phantom-coerce"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Safe, zero-cost coercion between types differing only in PhantomData parameters"
repository = "https://github.com/attunehq/phantom-coerce"
documentation = "https://docs.rs/phantom-coerce"
homepage = "https://github.com/attunehq/phantom-coerce"
readme = "../README.md"
keywords = ["phantom", "coerce", "type-safety", "zero-cost"]
categories = ["rust-patterns", "no-std"]
authors = ["Attune <engineering@attunehq.com>"]

[dependencies]
phantom-coerce-derive = { version = "0.1.0", path = "../phantom-coerce-derive" }

[dev-dependencies]
trybuild = "1.0"
